jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: helm-deploy
      nodeSelector:
        kubernetes.io/hostname: node2
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: jenkins
        image: choisunguk/jenkins:jdk11
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        # - name: docker-sock
        #   mountPath: /var/run/docker.sock
        - name: kuebctl
          mountPath: /usr/local/bin/kubectl
        - name: helm
          mountPath: /usr/local/bin/helm
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins
      - name: helm
        hostPath:
          path: /usr/local/bin/helm
    #   - name: docker-sock
    #     hostPath:
    #       path: /var/run/docker.sock
      - name: kuebctl
        hostPath:
          path: /usr/local/bin/kubectl
